# Hikyaku

./: .gitignore  Cargo.toml  LICENSE-ap.md  README.md
src/: errors.rs  lib.rs
src/services/: box.rs  file_system.rs  google_drive.rs  mod.rs
src/services/file_system/: download.rs  mod.rs  upload.rs
src/services/file_system_builder/: amazon_s3.rs  google_drive.rs  mod.rs
src/types/: google_drive.rs  mod.rs
src/utils/: errors.rs  file_type.rs  mod.rs  oauth2.rs  parser.rs  reqwest.rs  types.rs
src/utils/credential/: google_drive_credential.rs  mod.rs  s3_credential.rs
src/utils/file_type/: mod.rs
src/utils/identifier/: google_drive_identifier.rs  mod.rs  s3_identifier.rs
src/utils/oauth2/: drop_control.rs  mod.rs  provider.rs  services.rs  stores.rs  token_refresh.rs  url_parser.rs  web_server.rs
src/utils/region/: aws.rs  mod.rs
src/utils/types/: google_drive.rs
