[package]
name = "hikyaku"
version = "0.1.0"
edition = "2021"
authors = ["shima@little-tabby.com"]
license = "MIT/Apache-2.0"

[dependencies]
axum = "0.7"
oauth2 = { version = "4", features = ["rustls-tls"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
url = "2"
log = "0.4"
env_logger = "0.11"
jsonwebtoken = "9"